--- a/index.html
+++ b/index.html
@@ -5,7 +5,145 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main-page">
+      <div class="container">
+        <div class="nav">
+          <div class="row">
+            <div class="logo">
+              <img src="images/logo.png" alt="" />
+            </div>
+            <div class="list">
+              <h4>Home</h4>
+              <h4>Portfolio</h4>
+              <h4>Contact</h4>
+              <h4>Services</h4>
+            </div>
+          </div>
+        </div>
+        <div class="row main-page__content">
+          <div class="main-page__text col-lg-6">
+            <h6>WELCOME</h6>
+            <h1>Lorem ipsum dolor sit <br />amet consectetur</h1>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit
+              nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum,
+              voluptate culpa nesciunt delectus iste?
+            </p>
+            <button class="btn btn--ghost">Explore now</button>
+          </div>
+          <img src="images/Group.png" class="col-lg-6" alt="" />
+        </div>
+      </div>
+    </div>
+    <div class="partners">
+      <div class="container">
+        <div class="tittle">
+          <h6>PARTNERS</h6>
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="partners__img">
+          <div class="row">
+            <img src="images/google.png" alt="" />
+            <img src="images/microsoft.png" alt="" />
+            <img src="images/airbnb.png" alt="" />
+            <img src="images/facebook.png" alt="" />
+            <img src="images/spotify.png" alt="" />
+          </div>
+        </div>
+        <button class="btn btn--main">Learn More</button>
+      </div>
+    </div>
+    <div class="expertise">
+      <div class="container">
+        <div class="row">
+          <img class="col-lg-6" src="images/togetha.png" alt="" />
+          <div class="col-lg-5 expertise__text">
+            <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit
+              nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum,
+              voluptate culpa nesciunt delectus iste?
+            </p>
+            <div class="btn btn--main">Learn More</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="expertise">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5 expertise__text">
+            <h3>Lorem ipsum dolor sit amet consectetur</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit
+              nemo hic quos, ab, dolor aperiam nobis cum est eos error ipsum,
+              voluptate culpa nesciunt delectus iste?
+            </p>
+            <button class="btn btn--main">Learn More</button>
+          </div>
+          <img class="col-lg-6" src="images/man-working.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <div class="team">
+      <div class="container">
+        <div class="tittle">
+          <h6>PARTNERS</h6>
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="row">
+          <div class="team__person">
+            <img
+              style="width: 175px; height: 175px"
+              src="images/Mask group.png"
+              alt=""
+            />
+            <h6>Peg Legge</h6>
+            <p>CEO</p>
+          </div>
+          <div class="team__person">
+            <img
+              style="width: 175px; height: 175px"
+              src="images/Mask group (1).png"
+              alt=""
+            />
+            <h6>Richard Guerra</h6>
+            <p>CTO</p>
+          </div>
+          <div class="team__person">
+            <img
+              style="width: 175px; height: 175px"
+              src="images/Group 15.png  "
+              alt=""
+            />
+            <h6>Alexandra Stolz</h6>
+            <p>DESIGNER</p>
+          </div>
+          <div class="team__person">
+            <img
+              style="width: 175px; height: 175px"
+              src="images/Mask group (2).png  "
+              alt=""
+            />
+            <h6>Janet Bray</h6>
+            <p>DEVELOPER</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container"><p>© Start, 2022. All rights reserved.</p></div>
+    </div>
+  </body>
 </html>
